# YouTubeVideoAutomation

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md  api.py  main.py  package-lock.json  pyproject.toml  requirements.txt  streamlit_app.py  test_core_functionality.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml
data/batch/: example_batch.csv
data/batch/examples/: gaming_uploads.csv  mixed_content.csv  tutorial_series.csv
docs/: authentication.md  batch_processing.md  content_creator_guide.md  developer_guide.md  faq.md  installation.md  troubleshooting.md
docs/api/: README.md
docs/development/: README.md
docs/examples/: advanced_config.md  batch_processing_example.md  custom_thumbnails.md
docs/templates/: README.md  gaming.md  tutorials.md  vlogs.md
src/youtube_processor/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  models.py
src/youtube_processor/core/: downloader.py  processor.py  youtube_api.py
src/youtube_processor/utils/: csv_validator.py  thumbnail_processor.py
templates/: batch_upload_template.csv
tests/: conftest.py  test_downloader.py  test_processor.py
